--- a/app/src/main/res/layout/start_activity.xml
+++ b/app/src/main/res/layout/start_activity.xml
@@ -5,7 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".startActivity">
+    tools:context=".start.StartActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
